// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-image prop 1`] = `
<div class="zv-coupon-list">
  <div class="zv-coupon-list__exchange-bar">
    <div class="zv-cell zv-cell--borderless zv-field zv-coupon-list__field">
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="text" placeholder="请输入优惠码" class="zv-field__control"></div>
      </div>
    </div><button disabled="disabled" class="zv-button zv-button--danger zv-button--normal zv-button--plain zv-button--disabled zv-coupon-list__exchange"><span class="zv-button__text">兑换</span></button>
  </div>
  <div class="zv-tabs zv-tabs--line zv-coupon-list__tab">
    <div class="zv-tabs__wrap">
      <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
        <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">可用 (0)<!----></span></div>
        <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">不可用 (0)<!----></span></div>
        <div class="zv-tabs__line"></div>
      </div>
    </div>
    <div class="zv-tabs__content">
      <div role="tabpanel" class="zv-tab__pane">
        <div class="zv-coupon-list__list zv-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="zv-coupon-list__empty"><img src="https://img.yzcdn.com/xxx.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="zv-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="zv-coupon-list__bottom"><button class="zv-button zv-button--danger zv-button--normal zv-button--block zv-button--round zv-coupon-list__close"><span class="zv-button__text">不使用优惠券</span></button></div>
</div>
`;

exports[`render coupon cell 1`] = `
<div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-coupon-cell">
  <div class="zv-cell__title"><span>优惠券</span></div>
  <div class="zv-cell__value"><span>暂无可用</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon cell with coupon 1`] = `
<div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-coupon-cell">
  <div class="zv-cell__title"><span>优惠券</span></div>
  <div class="zv-cell__value zv-coupon-cell--selected"><span>-¥1.00</span></div><i class="zv-icon zv-icon-arrow zv-cell__right-icon">
    <!----></i>
</div>
`;

exports[`render coupon list 1`] = `
<div class="zv-coupon-list">
  <div class="zv-coupon-list__exchange-bar">
    <div class="zv-cell zv-cell--borderless zv-field zv-coupon-list__field">
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="text" placeholder="请输入优惠码" class="zv-field__control"></div>
      </div>
    </div><button disabled="disabled" class="zv-button zv-button--danger zv-button--normal zv-button--plain zv-button--disabled zv-coupon-list__exchange"><span class="zv-button__text">兑换</span></button>
  </div>
  <div class="zv-tabs zv-tabs--line zv-coupon-list__tab">
    <div class="zv-tabs__wrap">
      <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
        <div role="tab" aria-selected="true" class="zv-tab zv-tab--active zv-ellipsis"><span class="zv-tab__text">可用 (6)<!----></span></div>
        <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">不可用 (2)<!----></span></div>
        <div class="zv-tabs__line"></div>
      </div>
    </div>
    <div class="zv-tabs__content">
      <div role="tabpanel" class="zv-tab__pane">
        <div class="zv-coupon-list__list zv-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="zv-coupon">
            <div class="zv-coupon__content">
              <div class="zv-coupon__head">
                <h2 class="zv-coupon__amount"></h2>
                <p class="zv-coupon__condition">无使用门槛</p>
              </div>
              <div class="zv-coupon__body">
                <p class="zv-coupon__name"></p>
                <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox zv-coupon__corner" size="18">
                  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="zv-coupon">
            <div class="zv-coupon__content">
              <div class="zv-coupon__head">
                <h2 class="zv-coupon__amount"><span>¥</span> 1.5</h2>
                <p class="zv-coupon__condition">无使用门槛</p>
              </div>
              <div class="zv-coupon__body">
                <p class="zv-coupon__name">name</p>
                <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="true" class="zv-checkbox zv-coupon__corner" size="18">
                  <div class="zv-checkbox__icon zv-checkbox__icon--round zv-checkbox__icon--checked"><i class="zv-icon zv-icon-success" style="border-color: #ee0a24; background-color: rgb(238, 10, 36);">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="zv-coupon__description">description</p>
          </div>
          <div class="zv-coupon">
            <div class="zv-coupon__content">
              <div class="zv-coupon__head">
                <h2 class="zv-coupon__amount"><span>¥</span> 1</h2>
                <p class="zv-coupon__condition">无使用门槛</p>
              </div>
              <div class="zv-coupon__body">
                <p class="zv-coupon__name">name</p>
                <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox zv-coupon__corner" size="18">
                  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="zv-coupon__description">description</p>
          </div>
          <div class="zv-coupon">
            <div class="zv-coupon__content">
              <div class="zv-coupon__head">
                <h2 class="zv-coupon__amount"><span>¥</span> 1.23</h2>
                <p class="zv-coupon__condition">无使用门槛</p>
              </div>
              <div class="zv-coupon__body">
                <p class="zv-coupon__name">name</p>
                <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox zv-coupon__corner" size="18">
                  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
            <p class="zv-coupon__description">description</p>
          </div>
          <div class="zv-coupon">
            <div class="zv-coupon__content">
              <div class="zv-coupon__head">
                <h2 class="zv-coupon__amount">8.8折</h2>
                <p class="zv-coupon__condition">满0.5元可用</p>
              </div>
              <div class="zv-coupon__body">
                <p class="zv-coupon__name">name</p>
                <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox zv-coupon__corner" size="18">
                  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
          <div class="zv-coupon">
            <div class="zv-coupon__content">
              <div class="zv-coupon__head">
                <h2 class="zv-coupon__amount">9折</h2>
                <p class="zv-coupon__condition">满0.5元可用</p>
              </div>
              <div class="zv-coupon__body">
                <p class="zv-coupon__name">name</p>
                <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
                <div role="checkbox" tabindex="0" aria-checked="false" class="zv-checkbox zv-coupon__corner" size="18">
                  <div class="zv-checkbox__icon zv-checkbox__icon--round"><i class="zv-icon zv-icon-success">
                      <!----></i></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="zv-tab__pane" style="display: none;">
        <!---->
      </div>
    </div>
  </div>
  <div class="zv-coupon-list__bottom"><button class="zv-button zv-button--danger zv-button--normal zv-button--block zv-button--round zv-coupon-list__close"><span class="zv-button__text">不使用优惠券</span></button></div>
</div>
`;

exports[`render disabled coupon 1`] = `
<div class="zv-coupon zv-coupon--disabled">
  <div class="zv-coupon__content">
    <div class="zv-coupon__head">
      <h2 class="zv-coupon__amount"><span>¥</span> 1.5</h2>
      <p class="zv-coupon__condition">无使用门槛</p>
    </div>
    <div class="zv-coupon__body">
      <p class="zv-coupon__name">name</p>
      <p class="zv-coupon__valid">2017.03.10 - 2017.12.30</p>
    </div>
  </div>
  <p class="zv-coupon__description">reason</p>
</div>
`;

exports[`render empty coupon list 1`] = `
<div class="zv-coupon-list">
  <div class="zv-coupon-list__exchange-bar">
    <div class="zv-cell zv-cell--borderless zv-field zv-coupon-list__field">
      <div class="zv-cell__value zv-cell__value--alone zv-field__value">
        <div class="zv-field__body"><input type="text" placeholder="请输入优惠码" class="zv-field__control"></div>
      </div>
    </div><button disabled="disabled" class="zv-button zv-button--danger zv-button--normal zv-button--plain zv-button--disabled zv-coupon-list__exchange"><span class="zv-button__text">兑换</span></button>
  </div>
  <div class="zv-tabs zv-tabs--line zv-coupon-list__tab">
    <div class="zv-tabs__wrap">
      <div role="tablist" class="zv-tabs__nav zv-tabs__nav--line">
        <div role="tab" class="zv-tab zv-ellipsis"><span class="zv-tab__text">可用 (0)<!----></span></div>
        <div role="tab" class="zv-tab zv-tab--active zv-ellipsis" aria-selected="true"><span class="zv-tab__text">不可用 (0)<!----></span></div>
        <div class="zv-tabs__line"></div>
      </div>
    </div>
    <div class="zv-tabs__content">
      <div role="tabpanel" class="zv-tab__pane" style="display: none;">
        <div class="zv-coupon-list__list zv-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="zv-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
      <div role="tabpanel" class="zv-tab__pane" style="">
        <div class="zv-coupon-list__list zv-coupon-list__list--with-bottom" style="height: 628px;">
          <div class="zv-coupon-list__empty"><img src="https://img.yzcdn.cn/vant/coupon-empty.png">
            <p>暂无优惠券</p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="zv-coupon-list__bottom"><button class="zv-button zv-button--danger zv-button--normal zv-button--block zv-button--round zv-coupon-list__close"><span class="zv-button__text">不使用优惠券</span></button></div>
</div>
`;
